--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Kaimsys",
-  "name": "Kaimsys - Transform Your Business with AI",
+  "short_name": "KAiM Systems",
+  "name": "KAiM Systems - Transform Your Business with AI",
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
