Add Compliance AI Chat feature with OpenAI integration

--- a/amplify.yml
+++ b/amplify.yml
@@ -1,16 +1,35 @@
 version: 1
-frontend:
-  phases:
-    preBuild:
-      commands:
-        - npm install
-    build:
-      commands:
-        - npm run build
-  artifacts:
-    baseDirectory: build
-    files:
-      - '**/*'
-  cache:
-    paths:
-      - node_modules/**/*
+applications:
+  - frontend:
+      phases:
+        preBuild:
+          commands:
+            - npm install
+        build:
+          commands:
+            - npm run build
+      artifacts:
+        baseDirectory: build
+        files:
+          - '**/*'
+      cache:
+        paths:
+          - node_modules/**/*
+    appRoot: /
+  - backend:
+      phases:
+        build:
+          commands:
+            - cd server
+            - npm install
+            - echo "Setting up environment variables..."
+            - echo "OPENAI_API_KEY=$OPENAI_API_KEY" >> .env
+            - echo "REDIS_URL=$REDIS_URL" >> .env
+            - echo "JWT_SECRET=$JWT_SECRET" >> .env
+      artifacts:
+        baseDirectory: server
+        files:
+          - '**/*'
+      cache:
+        paths:
+          - server/node_modules/**/*
