--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.5",
     "@mui/icons-material": "^5.14.5",
+    "@mui/lab": "^5.0.0-alpha.165",
+    "axios": "^1.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
