--- a/amplify.yml
+++ b/amplify.yml
@@ -1,26 +1,16 @@
 version: 1
-applications:
-  - frontend:
-      phases:
-        preBuild:
-          commands:
-            - npm install
-            - echo "Setting up server dependencies..."
-            - cd server && npm install && cd ..
-            - echo "Creating .env file for server..."
-            - echo "PORT=3001" > server/.env
-            - echo "OPENAI_API_KEY=$OPENAI_API_KEY" >> server/.env
-            - echo "JWT_SECRET=$JWT_SECRET" >> server/.env
-        build:
-          commands:
-            - npm run build
-      artifacts:
-        baseDirectory: build
-        files:
-          - '**/*'
-        discard-paths: yes
-      cache:
-        paths:
-          - node_modules/**/*
-          - server/node_modules/**/*
-    appRoot: /
+frontend:
+  phases:
+    preBuild:
+      commands:
+        - npm install
+    build:
+      commands:
+        - npm run build
+  artifacts:
+    baseDirectory: build
+    files:
+      - '**/*'
+  cache:
+    paths:
+      - node_modules/**/*
