--- a/amplify.yml
+++ b/amplify.yml
@@ -3,7 +3,7 @@ frontend:
   phases:
     preBuild:
       commands:
-        - npm install
+        - npm ci
     build:
       commands:
         - npm run build
@@ -14,3 +14,6 @@ frontend:
   cache:
     paths:
       - node_modules/**/*
+build:
+  commands:
+    - echo "Build completed successfully"
