--- a/amplify.yml
+++ b/amplify.yml
@@ -1,19 +1,10 @@
 version: 1
 frontend:
   phases:
-    preBuild:
-      commands:
-        - npm ci
     build:
       commands:
-        - npm run build
+        - echo "No build required for static HTML deployment"
   artifacts:
-    baseDirectory: build
+    baseDirectory: public
     files:
       - '**/*'
-  cache:
-    paths:
-      - node_modules/**/*
-build:
-  commands:
-    - echo "Build completed successfully"
