--- a/amplify.yml
+++ b/amplify.yml
@@ -18,5 +18,6 @@ backend:
         - npm install
         - echo "Setting up environment variables..."
         - echo "PORT=3001" >> .env
-        - echo "OPENAI_API_KEY=$OPENAI_API_KEY" >> .env
+        # The OPENAI_API_KEY will be set in the Amplify Console environment variables
+        - echo "OPENAI_API_KEY=${OPENAI_API_KEY}" >> .env
         - echo "Backend build completed successfully"
